[gd_scene load_steps=8 format=2]

[ext_resource path="res://GameDVDCardtridge/BolaAccelerometer/BolaAccelerometer.gd" type="Script" id=1]
[ext_resource path="res://GameDVDCardtridge/BolaAccelerometer/TembokNyatu.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameDVDCardtridge/404/uiPart/Menu404.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameDVDCardtridge/BolaAccelerometer/MiringMeterSemangat.tscn" type="PackedScene" id=4]
[ext_resource path="res://font/ubuntu-font-family-0.83/Ubuntu-B.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://GameDVDCardtridge/BolaAccelerometer/Bola2D.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
resource_name = "Ubuntu Bold 48"
size = 48
outline_size = 1
outline_color = Color( 0.168627, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="BolaAccelerometer" type="Node"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Bola2D" parent="Node2D" instance=ExtResource( 6 )]

[node name="TembokNyatu" parent="Node2D" instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MengandungMenu" type="HBoxContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.698303
margin_right = 0.698242
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu404" parent="CanvasLayer/Control" instance=ExtResource( 3 )]
anchor_right = 1.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 63.0

[node name="ChangeDVDButton" parent="CanvasLayer/Control/Menu404" index="0"]
margin_left = 631.0
margin_right = 931.0
custom_fonts/font = SubResource( 1 )

[node name="ExitGameButton" parent="CanvasLayer/Control/Menu404" index="1"]
margin_left = 935.0
margin_right = 1289.0
custom_fonts/font = SubResource( 1 )

[node name="MiringMeterSemangat" parent="CanvasLayer/Control" instance=ExtResource( 4 )]
[connection signal="pressed" from="CanvasLayer/Control/Menu404/ChangeDVDButton" to="." method="_on_ChangeDVDButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Menu404/ExitGameButton" to="." method="_on_ExitGameButton_pressed"]

[editable path="CanvasLayer/Control/Menu404"]
